исправил получение всех заявок вам в друзья
